--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@ Welcome to GeoKPIAnalyzer! This Python script automates the
           <article>
             <figure>
               <div>
-               <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Support_Vector_Machine" >
+               <a href="https://github.com/hsabaghpour/LSTM_Throughput_Prediction" >
                 <img
-                  src="./imgs/SVM.png"
+                  src="./imgs/LTSM.jpg"
                   alt="SVM" 
                   width="100%"
                 />
@@ -254,26 +254,25 @@ Welcome to GeoKPIAnalyzer! This Python script automates the
                 <figcaption>Support Vector Machine</figcaption>
               </div>
             </figure>
-            <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Support_Vector_Machine">
+            <a href="https://github.com/hsabaghpour/LSTM_Throughput_Prediction">
               <br>
 
                       <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
                       <br>
             </a>
             <br>
-            <div><strong>Support_Vector_Machine</strong></div>
+            <div><strong>LSTM-based throughput prediction model</strong></div>
             <br>
             <p>
-              Exploring Support Vector Machines (SVMs) with 
-              the Iris dataset! SVMs shine in classification, 
-              regression, and outlier detection, particularly with smaller 
-              datasets like Iris. The Linear SVM method seeks the widest 
-              street (large margin) to separate classes using support vectors, 
-              emphasizing the importance of scaled features. 
-              Soft Margin, on the other hand, offers flexibility 
-              by balancing margin width and violations, controlled by 
-              the C parameter. My recent work with the Iris dataset 
-              using SVMs is available on my GitHub page
+              This project implements an LSTM-based throughput prediction model with an attention mechanism 
+              for LTE networks. The goal is to predict future network throughput using time-series data, where 
+              eNodeBs (base stations) are modeled as nodes, and throughput fluctuations are captured in the data. 
+              The project is structured into modular components, including dataset preparation (using a sliding window method),
+              the attention-based LSTM model, and performance evaluation using Root Mean Squared Error (RMSE). 
+              The model is trained to predict future throughput, offering improved accuracy over traditional methods by focusing on 
+              relevant time steps in the data via the attention 
+              mechanism. While the original dataset is confidential, users can adapt the code to use their own time-series 
+              throughput data.
             </p>
           </article>
           <article>
@@ -478,7 +477,42 @@ XGBoost, a cutting-edge machine learning algorithm, excels in handling large,
             </p>
          
 
+</article>
+               <article>
+            <figure>
+              <div>
+               <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Support_Vector_Machine" >
+                <img
+                  src="./imgs/SVM.png"
+                  alt="SVM" 
+                  width="100%"
+                />
+                </a>
+                <figcaption>Support Vector Machine</figcaption>
+              </div>
+            </figure>
+            <a href="https://github.com/hsabaghpour/ML-Projects/tree/Machine_Learning_Lab/Support_Vector_Machine">
+              <br>
 
+                      <h2 class="button-like"> Click  here to see the code on GitHub! </h2> 
+                      <br>
+            </a>
+            <br>
+            <div><strong>Support_Vector_Machine</strong></div>
+            <br>
+            <p>
+              Exploring Support Vector Machines (SVMs) with 
+              the Iris dataset! SVMs shine in classification, 
+              regression, and outlier detection, particularly with smaller 
+              datasets like Iris. The Linear SVM method seeks the widest 
+              street (large margin) to separate classes using support vectors, 
+              emphasizing the importance of scaled features. 
+              Soft Margin, on the other hand, offers flexibility 
+              by balancing margin width and violations, controlled by 
+              the C parameter. My recent work with the Iris dataset 
+              using SVMs is available on my GitHub page
+            </p>
+          </article>
 
 
         
